--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: c
 #before_script: "cd examples"
-#script:   "make"
+script:   "echo compiled with coverity"
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
