fix for sending

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: c
 #before_script: "cd examples"
-script:   "echo compiled with coverity"
+script:   "cd examples && tar czvf cov-int.tgz cov-int && curl --form token=secure --form email=kazan417@mail.ru --form file=@cov-int.tgz --form version='Version' --form description='Description' https://scan.coverity.com/builds?project=kazan417%2Fmongoose"  
+    
+
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
