--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 
 #before_script: "cd examples"
-script:   "cd examples && tar czvf cov-int.tgz cov-int && curl --form token=$secure --form email=kazan417@mail.ru --form file=@cov-int.tgz --form version='Version 6.1' --form description='Description' https://scan.coverity.com/builds?project=kazan417%2Fmongoose"
+script:   "echo $COVERITY_SCAN_TOKEN && cd examples && tar czvf cov-int.tgz cov-int && curl --form token=$COVERITY_SCAN_TOKEN --form email=kazan417@mail.ru --form file=@cov-int.tgz --form version='Version 6.1' --form description='Description' https://scan.coverity.com/builds?project=kazan417%2Fmongoose"
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
